<resources>
    <string name="app_name">Interview</string>
    <string name="title_activity_feed_page">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dummytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ipsum nibh, bibendum eget massa a, euismod volutpat ligula. Etiam tempus sollicitudin dignissim. Morbi a velit at nulla rutrum faucibus. Maecenas vehicula, massa ac viverra scelerisque, magna nibh pulvinar tortor, placerat venenatis tellus orci nec tellus. Aenean lobortis eu metus quis bibendum. Fusce quis sem nisl. Ut nec ligula eget odio congue rhoncus. Nam elementum metus nulla. Curabitur non hendrerit lectus. Nullam porta fringilla dolor et iaculis. Fusce ut ullamcorper lacus.</string>
    <string name="error_message">An error occurred. Tap to retry</string>
    <string name="refresh_message">Retry</string>
    <string name="countlabel">ITEMS</string>
    <string name="select_size">Select Size</string>
    <string name="total_amount_label">Amount to be paid : </string>
    <string name="creditcardlabel">Credit Card</string>
    <string name="debitcardlabel">Debit Card</string>
    <string name="netbankinglabel">Net Banking</string>
    <string name="paymentheader">Payment Methods</string>
    <string name="address1">Mountain View, California, United States</string>
    <string name="address2">Cupertino, California, United States</string>
    <string name="addressheader">Delivery Address</string>
    <string name="title_activity_card">CardActivity</string>
    <string name="card_nick_name_hint">Haseeb</string>
    <string name="card_name_hint">Haseeb</string>
    <string name="card_number_hint">111111111111111</string>

</resources>
